--- a/pom.xml
+++ b/pom.xml
@@ -38,24 +38,33 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Database Authentication Begin -->
+        <!-- 自定义认证的方式 begin -->
         <dependency>
             <groupId>org.apereo.cas</groupId>
-            <artifactId>cas-server-support-jdbc</artifactId>
+            <artifactId>cas-server-core-webflow</artifactId>
             <version>${cas.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apereo.cas</groupId>
-            <artifactId>cas-server-support-jdbc-drivers</artifactId>
+            <artifactId>cas-server-core-configuration</artifactId>
             <version>${cas.version}</version>
-            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apereo.cas</groupId>
+            <artifactId>cas-server-core-authentication</artifactId>
+            <version>${cas.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apereo.cas</groupId>
+            <artifactId>cas-server-webapp-config</artifactId>
+            <version>${cas.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>6.0.6</version>
         </dependency>
-        <!-- Database Authentication End -->
 
         <!-- restful -->
         <dependency>
