--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,3 @@
-hugeo.css.file=/themes/hugeo/css/cas.css
-hugeo.js.file=/themes/hugeo/js/cas.js
+app.css.file=/themes/app/css/cas.css
+app.js.file=/themes/app/js/cas.js
 demo.pageTitle=this is it
